--- a/mjlog2json-checker/Cargo.toml
+++ b/mjlog2json-checker/Cargo.toml
@@ -3,6 +3,7 @@ name = "mjlog2json-checker"
 version = "0.1.0"
 edition = "2021"
 description = "Verify that mjlog2json conversion matches the official xml and json"
+repository = "https://github.com/tsubakisakura/mjlog2json/mjlog2json-checker"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
