--- a/tenhou-json/Cargo.toml
+++ b/tenhou-json/Cargo.toml
@@ -3,6 +3,7 @@ name = "tenhou-json"
 version = "0.1.0"
 edition = "2021"
 description = "Parsing Tenhou tenhou-json json files"
+repository = "https://github.com/tsubakisakura/mjlog2json/tenhou-json/"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
