--- a/mjlog2json-core/Cargo.toml
+++ b/mjlog2json-core/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "mjlog2json-core"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Convert mjlog-XML to tenhou-JSON (core lib)"
-repository = "https://github.com/tsubakisakura/mjlog2json/mjlog2json-core/"
+repository = "https://github.com/tsubakisakura/mjlog2json/"
+documentation = "https://docs.rs/mjlog2json-core"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
-mjlog = { version = "0.1.0", path = "../mjlog" }
-tenhou-json = { version = "0.1.0", path = "../tenhou-json" }
+mjlog = { version = "0.1.1", path = "../mjlog" }
+tenhou-json = { version = "0.1.1", path = "../tenhou-json" }
 thiserror = "2.0.12"
