--- a/tenhou-json/Cargo.toml
+++ b/tenhou-json/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "tenhou-json"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Parsing Tenhou tenhou-json json files"
-repository = "https://github.com/tsubakisakura/mjlog2json/tenhou-json/"
+repository = "https://github.com/tsubakisakura/mjlog2json/"
+documentation = "https://docs.rs/tenhou-json"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
