--- a/mjlog/Cargo.toml
+++ b/mjlog/Cargo.toml
@@ -12,4 +12,6 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 percent-encoding = "2.3.1"
 quick-xml = "0.37"
+serde = "1.0.219"
+serde_derive = "1.0.219"
 thiserror = "2.0.11"
